kubernetes/apps/default/writefreely/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writefreely
  namespace: default
  labels:
    app: writefreely
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writefreely
  template:
    metadata:
      labels:
        app: writefreely
    spec:
      securityContext:
        runAsUser: 2
        runAsGroup: 2
        fsGroup: 2
      imagePullSecrets:
        - name: ghcr-io-registry
      containers:
        - name: writefreely
          image: ghcr.io/kymppi/writefreely-docker:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /config/config.ini
              subPath: config.ini
            - name: data
              mountPath: /data/
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 20Mi
            limits:
              cpu: 200m
              memory: 200Mi
      volumes:
        - name: config
          configMap:
            name: wfconfig
        - name: data
          persistentVolumeClaim:
            claimName: writefreely-data
---
apiVersion: v1
kind: Service
metadata:
  name: writefreely
spec:
  type: ClusterIP
  selector:
    app: writefreely
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: writefreely
  namespace: default
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`i11l.blog`)
      kind: Rule
      services:
        - name: writefreely
          port: 80
          kind: Service
      middlewares:
        - name: redirect
          namespace: kube-system
  tls:
    certResolver: le
